--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -8,6 +8,9 @@ on:
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
+  repository_dispatch:
+    types:
+      - webhook
 
 # Set enviroment variables
 env:
