--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 	"dependencies": {
 		"@builder.io/sdk-svelte": "^0.1.3",
 		"@sveltejs/adapter-static": "^1.0.5",
+		"classnames": "^2.3.2",
 		"dotenv": "^16.0.3",
 		"sass": "^1.57.1"
 	}
