--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -14,7 +14,7 @@ on:
 
 # Set enviroment variables
 env:
-  BASE_PATH: /hel-kottarit
+  SITE_URL: 'eraleijonat.fi'
 
 # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
