--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
 		"@sveltejs/adapter-static": "^1.0.5",
 		"classnames": "^2.3.2",
 		"dotenv": "^16.0.3",
+		"eslint-plugin-svelte": "^2.25.0",
 		"sass": "^1.57.1"
 	}
 }
